SURF-490 Bump AWS SDK version (#893)